--- a/profile.html
+++ b/profile.html
@@ -3,9 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    
+<body class="bg-gray-100">
+
+    <!-- Header -->
+    <header class="w-full h-16 bg-white shadow-md flex items-center justify-between px-8">
+        <div class="flex items-center space-x-4">
+            <div class="text-blue-600 font-bold text-xl">Oracle</div>
+            <div class="text-gray-500">Categories</div>
+            <input type="text" placeholder="Search courses" class="border rounded-md px-3 py-1 outline-none">
+        </div>
+        <div class="flex items-center space-x-4">
+            <button class="text-gray-600">Teach on Oracle</button>
+            <img src="images/addtocart.jpg" alt="Cart" class="w-6 h-6">
+            <img src="images/bell.jpg" alt="Notifications" class="w-6 h-6">
+            <img src="images/heart.jpg" alt="Favorites" class="w-6 h-6">
+            <img src="images/Avatar.jpg" alt="Profile" class="w-10 h-10 rounded-full">
+        </div>
+    </header>
+
+    <!-- Main Container -->
+    <div class="flex justify-center mt-8 px-8">
+        <!-- Sidebar -->
+        <aside class="w-72 bg-gray-50 p-6 rounded-2xl">
+            <div class="flex flex-col items-center">
+                <img class="w-32 h-32 rounded-full" src="images/Avatar.jpg" alt="Profile Picture">
+                <h2 class="mt-4 text-lg font-semibold">John Doe</h2>
+                <button class="mt-2 px-4 py-1 bg-blue-600 text-white rounded">Share Profile</button>
+            </div>
+            <nav class="mt-6 space-y-2">
+                <a href="#" class="block py-2 px-3 bg-gray-900 text-white rounded">Profile</a>
+                <a href="my-courses.html" class="block py-2 px-3 hover:bg-gray-200 rounded">My Courses</a>
+
+                <a href="#" class="block py-2 px-3 hover:bg-gray-200 rounded">Teachers</a>
+                <a href="#" class="block py-2 px-3 hover:bg-gray-200 rounded">Message</a>
+                <a href="review.html" class="block py-2 px-3 hover:bg-gray-200 rounded">My Reviews</a>
+            </nav>
+        </aside>
+
+        <!-- Profile Content -->
+        <div class="ml-8 w-3/4 space-y-8">
+            <!-- Profile Form -->
+            <main class="bg-white p-8 rounded-2xl border border-gray-300">
+                <h3 class="text-xl font-semibold">Profile Information</h3>
+                <div class="grid grid-cols-2 gap-4 mt-4">
+                    <div>
+                        <label class="block text-gray-600">First Name</label>
+                        <input type="text" class="w-full px-3 py-2 border rounded-md" placeholder="John">
+                    </div>
+                    <div>
+                        <label class="block text-gray-600">Last Name</label>
+                        <input type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Doe">
+                    </div>
+                </div>
+                <div class="mt-4">
+                    <label class="block text-gray-600">Headline</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md" placeholder="Web Developer">
+                </div>
+                <div class="mt-4">
+                    <label class="block text-gray-600">Description</label>
+                    <textarea class="w-full px-3 py-2 border rounded-md" placeholder="Write about yourself..."></textarea>
+                </div>
+                <div class="mt-4">
+                    <label class="block text-gray-600">Language</label>
+                    <select class="w-full px-3 py-2 border rounded-md">
+                        <option>English</option>
+                        <option>Spanish</option>
+                        <option>French</option>
+                    </select>
+                </div>
+            </main>
+
+            <!-- Image Preview Section -->
+            <section class="bg-white p-8 rounded-2xl border border-gray-300">
+                <h3 class="text-xl font-semibold">Image Preview</h3>
+                <div class="border-2 border-dashed border-gray-300 rounded-md h-64 flex items-center justify-center mt-4">
+                    <img src="images/Avatar.jpg" alt="Image Preview" class="max-h-full max-w-full rounded-md">
+                </div>
+                <div class="mt-4">
+                    <label class="block text-gray-600">Add/Change Image</label>
+                    <input type="text" placeholder="Label" class="w-full px-3 py-2 border rounded-md mt-2">
+                    <div class="flex space-x-4 mt-4">
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded-md">Save Image</button>
+                        <button class="bg-gray-200 text-gray-700 px-4 py-2 rounded-md">Upload Image</button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Link Forum Section -->
+            <section class="bg-white p-8 rounded-2xl border border-gray-300">
+                <h3 class="text-xl font-semibold">Links</h3>
+                <div class="mt-4 space-y-4">
+                    <label>Website</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md">
+                    <label>X (Formerly Twitter)</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md">
+                    <label>LinkedIn</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md">
+                    <label>YouTube</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md">
+                    <label>Facebook</label>
+                    <input type="text" class="w-full px-3 py-2 border rounded-md">
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <!-- Footer -->
+<footer class="w-full bg-[#1E293B] text-white py-16">
+    <div class="max-w-screen-xl mx-auto px-16 grid grid-cols-4 gap-12">
+        
+        <!-- Brand Section -->
+        <div>
+            <div class="flex items-center mb-4">
+                <img src="images/byway-logo.png" alt="Byway Logo" class="w-10 h-10 mr-3">
+                <h2 class="text-2xl font-bold">Byway</h2>
+            </div>
+            <p class="text-sm leading-relaxed">
+                Empowering learners through accessible and engaging online education.<br>
+                Oracle is a leading online learning platform dedicated to providing high-quality, flexible, and affordable educational experiences.
+            </p>
+        </div>
+
+        <!-- Get Help Section -->
+        <div>
+            <h3 class="text-lg font-semibold mb-4">Get Help</h3>
+            <ul class="space-y-2 text-sm">
+                <li>Contact Us</li>
+                <li>Latest Articles</li>
+                <li>FAQ</li>
+            </ul>
+        </div>
+
+        <!-- Programs Section -->
+        <div>
+            <h3 class="text-lg font-semibold mb-4">Programs</h3>
+            <ul class="space-y-2 text-sm">
+                <li>Art & Design</li>
+                <li>Business</li>
+                <li>IT & Software</li>
+                <li>Languages</li>
+                <li>Programming</li>
+            </ul>
+        </div>
+
+        <!-- Contact Us Section -->
+        <div>
+            <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
+            <ul class="space-y-2 text-sm">
+                <li>Address: 123 Main Street, Anytown, CA 12345</li>
+                <li>Tel: +1 (123) 456-7890</li>
+                <li>Mail: Oracleedu@webkul.in</li>
+            </ul>
+            <div class="flex space-x-4 mt-4">
+                <img src="images/facebook.png" alt="Facebook" class="w-8 h-8">
+                <img src="images/github.png" alt="GitHub" class="w-8 h-8">
+                <img src="images/google.png" alt="Google" class="w-8 h-8">
+                <img src="images/x-icon.png" alt="X" class="w-8 h-8">
+                <img src="images/microsoft.png" alt="Microsoft" class="w-8 h-8">
+            </div>
+        </div>
+
+    </div>
+</footer>
+
+
 </body>
 </html>
