--- a/checkout.html
+++ b/checkout.html
@@ -4,74 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout - Page</title>
-    <link rel="stylesheet" href="checkout.css" />
+    <link rel="stylesheet" href="/Assets/style/checkout.css" />
+    <link rel="stylesheet" href="/Assets/style/head&footer.css">
+    <link rel="stylesheet" href="/Assets/style/responsive.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="hamburger-menu">
-        <svg
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M4 6h16M4 12h16M4 18h16"
-          ></path>
-        </svg>
-      </div>
-
-      <div class="navbar-logo">
-        <img src="Assets/logo.png" alt="Oracle Logo" />
-        <span>Oracle</span>
-      </div>
-
-      <div class="navbar-links">
-        <a href="#">Categories</a>
-        <div class="navbar-search-desktop">
-          <i class="fas fa-search search-icon"></i>
-          <input type="text" placeholder="Search courses" />
-        </div>
-        <a href="#">Teach on Oracle</a>
-      </div>
-
-      <div class="search-input-container-mobile">
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" placeholder="Search courses" />
-        <div class="cancel-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+    <div class="nav-conntainer">
+      <nav class="navbar">
+        <div class="hamburger-menu">
+          <svg
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
-              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
-            />
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            ></path>
           </svg>
         </div>
-      </div>
 
-      <div class="navbar-icons">
-        <div class="mobile-search-icon">
-          <i class="fas fa-search search-icon"></i>
+        <div class="navbar-logo">
+          <img src="Assets/logo.png" alt="Oracle Logo" />
+          <span>Oracle</span>
         </div>
-        <a href="" class="hidden-mobile"><i class="far fa-heart"></i></a>
-        <a href="" class="hidden-mobile"
-          ><i class="fas fa-shopping-cart"></i
-        ></a>
-        <a href="" class="hidden-mobile"><i class="far fa-bell"></i></a>
-        <div class="hidden-mobile user-profile"><a href="">J</a></div>
-      </div>
-    </nav>
+
+        <div class="navbar-links">
+          <a href="#">Categories</a>
+          <div class="navbar-search-desktop">
+            <i class="fas fa-search search-icon"></i>
+            <input type="text" placeholder="Search courses" />
+          </div>
+          <a href="#">Teach on Oracle</a>
+        </div>
+
+        <div class="search-input-container-mobile">
+          <i class="fas fa-search search-icon"></i>
+          <input type="text" placeholder="Search courses" />
+          <div class="cancel-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+              <path
+                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
+              />
+            </svg>
+          </div>
+        </div>
+
+        <div class="navbar-icons">
+          <div class="mobile-search-icon">
+            <i class="fas fa-search search-icon"></i>
+          </div>
+          <a href="" class="hidden-mobile"><i class="far fa-heart"></i></a>
+          <a href="" class="hidden-mobile"
+            ><i class="fas fa-shopping-cart"></i
+          ></a>
+          <a href="" class="hidden-mobile"><i class="far fa-bell"></i></a>
+          <div class="hidden-mobile user-profile"><a href="">J</a></div>
+        </div>
+      </nav>
+    </div>
     <div class="page-wrapper checkout-page">
       <main class="checkout-content">
         <div class="breadcrumb">
-          <h1>Checkout Page</h1>
-          <a href="/details">Details</a> <a href="/cart">Shopping Cart</a>
+          <div class="hearder">
+            <h1>Checkout Page</h1>
+          </div>
+       <div>
+           <a href="/details">Details</a>
+          <a href="/cart">Shopping Cart</a>
           <span>Checkout</span>
+       </div>
         </div>
 
         <div class="checkout-layout">
@@ -295,6 +304,6 @@
       </div>
     </footer>
 
-    <script src="checkout.js"></script>
+    <script src="/Assets/js/checkout.js"></script>
   </body>
 </html>
