made cateogory oage and added images for all pages

--- a/homescreen.html
+++ b/homescreen.html
@@ -23,7 +23,7 @@
                 <!-- Left side - Logo -->
                 <div class="d-flex align-items-center">
                     <a class="navbar-brand text-black" href="#" style="color: black;">
-                        <img src="./Images/logo.png" alt="logo" width="30" height="30">
+                        <img src="./Homescreen-Images/logo.png" alt="logo" width="30" height="30">
                         Oracle
                     </a>
                 </div>
@@ -54,7 +54,7 @@
                     
                     <!-- Right side - Cart and Buttons -->
                     <div class="d-flex align-items-center">
-                        <img src="./Images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
+                        <img src="./Homescreen-Images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
                         <button class="btn btn-outline-dark me-4 rounded-0">Log In</button>
                         <button class="btn header-btn ms-2 rounded-0">Sign Up</button>
                     </div>
@@ -79,26 +79,26 @@
     <div class="position-relative banner-visuals">
         <!-- Image 1 -->
         <div class="circle-img circle-red">
-            <img src="./Images/banner-overlap-1.png" alt="Student 1" class="circle-inner">
+            <img src="./Homescreen-Images/banner-overlap-1.png" alt="Student 1" class="circle-inner">
         </div>
 
         <!-- Image 2 -->
         <div class="circle-img circle-blue">
-            <img src="./Images/banner-overlap-2.png" alt="Student 2" class="circle-inner">
+            <img src="./Homescreen-Images/banner-overlap-2.png" alt="Student 2" class="circle-inner">
         </div>
 
         <!-- Image 3 -->
         <div class="circle-img circle-yellow">
-            <img src="./Images/banner-overlap-3.png" alt="Student 3" class="circle-inner">
+            <img src="./Homescreen-Images/banner-overlap-3.png" alt="Student 3" class="circle-inner">
         </div>
         <!-- Text bubble -->
         <div class="community-bubble ">
             <div class="avatars">
-                <img src="./Images/banner-top-1.png" alt="A1" class="avatar">
-                <img src="./Images/banner-top-2.png" alt="A2" class="avatar">
-                <img src="./Images/banner-top-3.png" alt="A3" class="avatar">
-                <img src="./Images/banner-top-4.png" alt="A4" class="avatar">
-                <img src="./Images/banner-top-5.png" alt="A5" class="avatar">
+                <img src="./Homescreen-Images/banner-top-1.png" alt="A1" class="avatar">
+                <img src="./Homescreen-Images/banner-top-2.png" alt="A2" class="avatar">
+                <img src="./Homescreen-Images/banner-top-3.png" alt="A3" class="avatar">
+                <img src="./Homescreen-Images/banner-top-4.png" alt="A4" class="avatar">
+                <img src="./Homescreen-Images/banner-top-5.png" alt="A5" class="avatar">
             </div>
             <p class="community-text ">Join our community of <strong>1200+ Students</strong></p>
         </div>
@@ -202,7 +202,7 @@
         <div class="col-md-3">
             <div class="course-card">
                 <div class="course-img">
-                    <img src="./Images/course-1.jpg" alt="Course 1">
+                    <img src="./Homescreen-Images/course-1.jpg" alt="Course 1">
                 </div>
                 <div class="course-info">
                     <h5>Beginner's Guide to Design</h5>
@@ -225,7 +225,7 @@
         <div class="col-md-3">
             <div class="course-card">
                 <div class="course-img">
-                    <img src="./Images/course-1.jpg" alt="Course 1">
+                    <img src="./Homescreen-Images/course-1.jpg" alt="Course 1">
                 </div>
                 <div class="course-info">
                     <h5>Beginner's Guide to Design</h5>
@@ -248,7 +248,7 @@
         <div class="col-md-3">
             <div class="course-card">
                 <div class="course-img">
-                    <img src="./Images/course-1.jpg" alt="Course 1">
+                    <img src="./Homescreen-Images/course-1.jpg" alt="Course 1">
                 </div>
                 <div class="course-info">
                     <h5>Beginner's Guide to Design</h5>
@@ -271,7 +271,7 @@
         <div class="col-md-3">
             <div class="course-card">
                 <div class="course-img">
-                    <img src="./Images/course-1.jpg" alt="Course 1">
+                    <img src="./Homescreen-Images/course-1.jpg" alt="Course 1">
                 </div>
                 <div class="course-info">
                     <h5>Beginner's Guide to Design</h5>
@@ -309,14 +309,14 @@
         <div class="col-md-4">
             <div class="review-card">
                 <div class="review-icon">
-                    <img src="./Images/review-icon.png" alt="Review Icon">
+                    <img src="./Homescreen-Images/review-icon.png" alt="Review Icon">
                 </div>
                 <div class="review-info">
                     <p>"Byway's tech courses are top-notch! As someone who's always looking to stay ahead in the rapidly evolving tech world, I appreciate the up-to-date content and engaging multimedia.</p>
                 </div>
                 <div class="review-person">
                     <div class="review-person-img">
-                        <img src="./Images/review-img.jpg" alt="Review Person">
+                        <img src="./Homescreen-Images/review-img.jpg" alt="Review Person">
                     </div>
                     <div class="review-person-info">
                         <p class="mb-0 review-person-name">Jane Doe</p>
@@ -328,14 +328,14 @@
         <div class="col-md-4">
             <div class="review-card">
                 <div class="review-icon">
-                    <img src="./Images/review-icon.png" alt="Review Icon">
+                    <img src="./Homescreen-Images/review-icon.png" alt="Review Icon">
                 </div>
                 <div class="review-info">
                     <p>"Byway's tech courses are top-notch! As someone who's always looking to stay ahead in the rapidly evolving tech world, I appreciate the up-to-date content and engaging multimedia.</p>
                 </div>
                 <div class="review-person">
                     <div class="review-person-img">
-                        <img src="./Images/review-img.jpg" alt="Review Person">
+                        <img src="./Homescreen-Images/review-img.jpg" alt="Review Person">
                     </div>
                     <div class="review-person-info">
                         <p class="mb-0 review-person-name">Jane Doe</p>
@@ -347,14 +347,14 @@
         <div class="col-md-4">
             <div class="review-card">
                 <div class="review-icon">
-                    <img src="./Images/review-icon.png" alt="Review Icon">
+                    <img src="./Homescreen-Images/review-icon.png" alt="Review Icon">
                 </div>
                 <div class="review-info">
                     <p>"Byway's tech courses are top-notch! As someone who's always looking to stay ahead in the rapidly evolving tech world, I appreciate the up-to-date content and engaging multimedia.</p>
                 </div>
                 <div class="review-person">
                     <div class="review-person-img">
-                        <img src="./Images/review-img.jpg" alt="Review Person">
+                        <img src="./Homescreen-Images/review-img.jpg" alt="Review Person">
                     </div>
                     <div class="review-person-info">
                         <p class="mb-0 review-person-name">Jane Doe</p>
@@ -371,7 +371,7 @@
 <div class="container-fluid become-instructor m-5 p-5 w-100">
     <div class="row justify-content-between align-items-center me-5">
         <div class="col-4 ms-5">
-            <img src="./Images/become-instructor.png" alt="Become a Instructor" class="img-fluid">
+            <img src="./Homescreen-Images/become-instructor.png" alt="Become a Instructor" class="img-fluid">
         </div>
         <div class="col-6">
             <div class="d-flex flex-column justify-content-center p-5 ms-2">
@@ -395,7 +395,7 @@
             </div>
         </div>
         <div class="col-4 ms-5">
-            <img src="./Images/checkout-courses-img.png" alt="Checkout Courses" class="img-fluid">
+            <img src="./Homescreen-Images/checkout-courses-img.png" alt="Checkout Courses" class="img-fluid">
         </div>
     </div>
 </div>
@@ -405,7 +405,7 @@
     <div class="row m-5">
             <div class="col-4">
                 <div class="d-flex align-items-center mb-4">
-                    <img src="./Images/logo.png" alt="Logo" class="img-fluid me-3" style="max-height: 50px;">
+                    <img src="./Homescreen-Images/logo.png" alt="Logo" class="img-fluid me-3" style="max-height: 50px;">
                     <h4 class="mb-0">Byway</h4>
                 </div>
                 <p class="mb-0">Empowering learners through accessible and engaging online education.</p>
@@ -435,7 +435,7 @@
                 <p class="mb-2">Tel: +(123) 456-7890</p>
                 <p class="mb-4">Mail: bywayedu@webkul.in</p>
                 <div class="social-icons">
-                    <img src="./Images/Footer-SCL-media-img.png" alt="Social Media Icons" class="img-fluid w-50">
+                    <img src="./Homescreen-Images/Footer-SCL-media-img.png" alt="Social Media Icons" class="img-fluid w-50">
                 </div>
         </div>
     </div>
