--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
                 <!-- Left side - Logo -->
                 <div class="d-flex align-items-center">
                     <a class="navbar-brand text-black" href="#" style="color: black;">
-                        <img src="./Images/logo.png" alt="logo" width="30" height="30">
+                        <img src="./login-images/logo.png" alt="Logo" width="30" height="30">
                         Oracle
                     </a>
                 </div>
@@ -46,7 +46,7 @@
                     
                     <!-- Right side - Cart and Buttons -->
                     <div class="d-flex align-items-center">
-                        <img src="./Images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
+                        <img src="./login-images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
                         <button class="btn btn-outline-dark me-4 rounded-0">Log In</button>
                         <button class="btn header-btn ms-2 rounded-0">Sign Up</button>
                     </div>
@@ -85,20 +85,20 @@
                     </div>
                     <div class="d-flex justify-content-center gap-3">
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/google-icon.png" alt="Google Icon" class="me-2" width="20" height="20">Google
+                            <img src="./login-images/google-icon.png" alt="Google" class="me-2" width="20" height="20">Google
                         </button>
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/facebook-icon.png" alt="Facebook Icon" class="me-2" width="20" height="20">Facebook
+                            <img src="./login-images/facebook-icon.png" alt="Facebook" class="me-2" width="20" height="20">Facebook
                         </button>
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/microsoft-icon.png" alt="Microsoft Icon" class="me-2" width="70" height="20">
+                            <img src="./login-images/microsoft-icon.png" alt="Microsoft" class="me-2" width="70" height="20">
                         </button>
                     </div>
                     
                 </form>
             </div>
             <div class="col-md-6 p-0">
-                <img src="./Images/login.jpg" alt="Login" class="img-fluid w-100" style="height: 100%; object-fit: cover;">
+                <img src="./login-images/login.jpg" alt="Login Image" class="img-fluid w-100" style="height: 100%; object-fit: cover;">
             </div>
         </div>
     </div>
