--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
                 <!-- Left side - Logo -->
                 <div class="d-flex align-items-center">
                     <a class="navbar-brand text-black" href="#" style="color: black;">
-                        <img src="./Images/logo.png" alt="logo" width="30" height="30">
+                        <img src="./signup-images/logo.png" alt="logo" width="30" height="30">
                         Oracle
                     </a>
                 </div>
@@ -47,7 +47,7 @@
                     
                     <!-- Right side - Cart and Buttons -->
                     <div class="d-flex align-items-center">
-                        <img src="./Images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
+                        <img src="./signup-images/header-cart-icon.png" class="me-3" alt="Cart" width="20" height="20">
                         <button class="btn btn-outline-dark me-4 rounded-0">Log In</button>
                         <button class="btn header-btn ms-2 rounded-0">Sign Up</button>
                     </div>
@@ -60,7 +60,7 @@
     <div class="container-fluid" style="height: 88.79vh;">
         <div class="row align-items-center">
             <div class="col-md-6 p-0">
-                <img src="./Images/form-img.jpg" alt="Form Image" class="img-fluid w-100" style="height: auto;">
+                <img src="./signup-images/form-img.jpg" alt="Form Image" class="img-fluid w-100" style="height: auto;">
             </div>
             <div class="col-md-6">
                 <form action="submit" class="p-4">
@@ -102,13 +102,13 @@
                       </div>
                     <div class="d-flex justify-content-center gap-3">
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/google-icon.png" alt="Google Icon" class="me-2" width="20" height="20">Google
+                            <img src="./signup-images/google-icon.png" alt="Google Icon" class="me-2" width="20" height="20">Google
                         </button>
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/facebook-icon.png" alt="Facebook Icon" class="me-2" width="20" height="20">Facebook
+                            <img src="./signup-images/facebook-icon.png" alt="Facebook Icon" class="me-2" width="20" height="20">Facebook
                         </button>
                         <button class="btn btn-outline-dark rounded-2 w-25 p-2">
-                            <img src="./Images/microsoft-icon.png" alt="Microsoft Icon" class="me-2" width="70" height="20">
+                            <img src="./signup-images/microsoft-icon.png" alt="Microsoft Icon" class="me-2" width="70" height="20">
                         </button>
                     </div>
                 </form>
